[build-system]
requires = ['flit']
build-backend = 'flit.buildapi'

[tool.flit.metadata]
module = 'asyncapi'
author = 'Diogo Dutra'
author-email = 'diogodutradamata@gmail.com'
home-page = 'https://github.com/dutradda/asyncapi'
classifiers = [
    'License :: OSI Approved :: MIT License',
    'Intended Audience :: Developers',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3 :: Only',
    'Topic :: Database',
]
requires = [
    'broadcaster',
    'jsondaora',
]
description-file = 'README.md'
requires-python = '>=3.8'

[tool.flit.metadata.urls]
Documentation = 'https://dutradda.github.io/asyncapi/'

[tool.flit.metadata.requires-extra]
test = [
    'black',
    'isort',
    'ipython',
    'mypy',
    'pytest-asyncio',
    'pytest-cov',
    'pytest-mock',
    'pytest',
    'flake8',
    'bumpversion',
    'jsondaora',
    'asynctest',
]
dev-doc = [
    'mkdocs',
    'mkdocs-material',
    'markdown-include'
]
http = [
    'requests',
]
yaml = [
    'pyyaml',
]
kafka = [
    'aiokafka',
]
redis = [
    'asyncio-redis',
]
postgres = [
    'asyncpg',
]
subscriber = [
    'typer',
]
docs = [
    'apidaora',
    'jinja2',
    'markdown',
    'uvicorn'
]
gcloud-pubsub = [
    'google-cloud-pubsub>=1,<2'
]

[tool.flit.sdist]
exclude = [
    "asyncapi/conftest.py",
    "asyncapi/_tests",
    "asyncapi/*/_tests",
    "asyncapi/*/*/_tests",
    "Makefile",
    "Bakefile",
    "devtools",
    "docs",
    "stubs",
    "mypy.ini",
    "mkdocs.yml",
    "theme",
    ".bumpversion.cfg",
    ".coveragerc",
    ".gitignore",
    ".gitmodules",
    ".flake8",
]

[tool.flit.scripts]
asyncapi-subscriber = "asyncapi:run_subscriber"
asyncapi-docs = "asyncapi:run_docs"

[tool.isort]
case_sensitive= '1'
use_parentheses = '1'
line_length = '79'
order_by_type = '1'
multi_line_output = '3'
include_trailing_comma = '1'
lines_after_imports = '2'
atomic = '1'

[tool.black]
exclude = '''
    \.pyi
'''
target-version = ['py38']
line-length = '79'
skip-string-normalization = '1'
